k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: 784065479571.dkr.ecr.us-west-1.amazonaws.com/vote
        name: vote
        ports:
        - containerPort: 80
          name: vote
